z-index at 0 for tube stops on timeline

--- a/_sass/pages/_about-us.scss
+++ b/_sass/pages/_about-us.scss
@@ -146,7 +146,7 @@
                 margin-left: -16px;
                 border: 5px #eee solid;
                 border-radius: 100%;
-                z-index: 1;
+                z-index: 0;
             }
             .timeline-inverted {
                 .timeline-panel {
